update swaggr-ui
